@startuml
skinparam classAttributeIconSize 0
left to right direction

package ui {
class SendEmailHighDelaysUI {}
}

package controller {
class SendEmailHighDelaysController {
  +getFreelancersWithMeanTaskDelay()
  +sendEmail(freelancersWithHighDelays)
}
}

package model {
class Platform {
  +getRegistryFreelancers()
}

package registrys {
class RegistryFreelancers {
  +getFreelancersWithHighDelays()
  +calculateSumDelayFreelancer(frl)
  +calculatePercentageFreelancerDelay(frl)
  +getAveragePercentageDelay()
  +sendEmailWithInfo(frl)
  +generateEmailHeader()
  +generateEmailContent(frl)
}
}

class Freelancer {
  -String idFreelancer
  -String freelancerName
  -String freelancerExpertise
  -String freelancerEmail
  -String freelancerNIF
  -String freelancerBankAccount
  -String freelancerAddress
  -String freelancerCountry
  +getFreelancerEmail()
}

interface "<<interface>>\nExternalEmailSender" {
  +sendEmail(email,header,content)
}
}

SendEmailHighDelaysUI ..> SendEmailHighDelaysController
SendEmailHighDelaysController ..> Platform
SendEmailHighDelaysController ..> RegistryFreelancers
Platform "1" --> "1" RegistryFreelancers: has
RegistryFreelancers "1" --> "*" Freelancer: has
Platform"1" -->"1" "<<interface>>\nExternalEmailSender" : has
"<<interface>>\nExternalEmailSender" ..> RegistryFreelancers

@enduml
